# socrates-dash-v2

./: .gitignore  DEPLOY_GUIDE.md  Procfile  RAILWAY_POSTGRESQL_SETUP.md  README.md  README_FLASK.md  app.py  app_production.py  app_simple.py  circos_cidades.csv  config.py  database.py  deploy.py  fly.toml  nixpacks.toml  pyproject.toml  render.yaml  requirements-minimal.txt  requirements-railway.txt  requirements.txt  run_web.py
templates/: index.html
uploads/: .gitkeep
