[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[project]
name = "socrates-online"
version = "1.0.0"
description = "Sócrates Online - Sistema de Relatórios de Faturamento"
requires-python = ">=3.11,<3.12"

dependencies = [
    "flask==2.3.3",
    "gunicorn==20.1.0",
    "numpy==1.24.4",
    "pandas==1.5.3",
    "openpyxl==3.1.2",
    "reportlab==4.0.4",
    "plotly==5.15.0",
    "psycopg2-binary==2.9.7"
]
